test/typecheck/errors/assign-type-to-var.boa
O: output sum of int;
O << 1;
p: Project = Project; # error
